# Vault

./: .env  Cargo.toml
Vault-autofill/: background.js  content_script.js  manifest.json  popup.html  popup.js
src/: config.rs  main.rs
src/email/: aliases.rs  api.rs  auth.rs  mailboxes.rs  mod.rs  types.rs  user.rs
src/profile/: generator.rs  mod.rs  models.rs  types.rs
src/secrets/: generator.rs  mod.rs  models.rs
src/utils/: random.rs
vault/: .env  index.sqlite  main.py  vault_service.py
vault/email_aliases/: aliases.py  api.py  auth.py  mailboxes.py  user.py
vault/profile/: generator.py  models.py  types.py
vault/profile_secrets/: generator.py
vault/vault/: vault.py
