[package]
name = "vault"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_with = "3.14.0"
sqlx = "0.8.6"
time = { version = "0.3.41", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v7"] }
rand = "0.9.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow = "1.0.99"
urlencoding = "2.1.3"
thiserror = "2.0.12"
dotenvy = "0.15"

